infrastructure/k8s/overlays/alpha/alpha-sandbox-cert-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vethelp-backend
spec:
  template:
    spec:
      containers:
        - name: vethelp-backend
